--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,29 @@
 body {
     color: black;
     font-family: arial, sans-serif;
-    background-color: #800020;
+    background-color: #C0C0C0;
+    height: 100%;
 }
 
 .navbar {
-    background-color: #C0C0C0;
+    background-color: #800020;
     color: black;
     margin-bottom: 0px;
     border: 2px solid;
 }
 
 .jumbotron {
-    background-color: #800020;
-    color: #C0C0C0;
+    background-color: #C0C0C0;
+    color: #800020;
+    padding-top: 60px;
     margin-bottom: 0px;
 }
 
 .contact-section {
-        color: #C0C0C0;
+        color: #800020;
 }
 
-#test {
+#logo {
     color: black;
 }
 
@@ -34,4 +36,37 @@ body {
 .carousel {
     border: 2px solid;
 }
+
+.carousel-caption {
+    color: black;
+}
+
+.contact {
+    border: solid black;
+    padding-top: 60px;
+    margin-top: 60px;
+    height: 90%;
+}
+
+#info {
+    background-color: #800020;
+    color: white;
+    height: 400px;
+    padding: 5px;
+    margin-top: 60px;
+}
+
+.footer {
+  position: relative;
+  margin-top: -450px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  padding-top:20px;
+}
+
+/*.navbar-nav > li > a > span.icon {
+    display: block;
+    font-size: 1.8em;
+}*/
+
 
